// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Asset /> should handle no query 1`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-right: 1px;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  margin-bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg,
.emotion-5 .noop svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #808080;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  margin-top: 1px;
  overflow: hidden;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-15 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-15:hover,
.emotion-15.focus-visible:focus,
.emotion-15 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-15:hover svg,
.emotion-15.focus-visible:focus svg,
.emotion-15 .noop svg {
  opacity: 1;
}

.emotion-15[aria-disabled=true],
.emotion-15 .noop {
  color: #808080;
}

.emotion-15:hover {
  background-color: #2e2e2e;
}

.emotion-19 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
        >
          <a
            className="emotion-5"
            href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <svg
              data-file-name="back.svg"
              height={20}
            />
          </a>
        </div>
        <div>
          FatManOnABike1914.mp4
        </div>
        <div
          className="emotion-6"
        />
      </div>
      <div
        className="emotion-7"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-12"
                >
                  <video
                    className="emotion-13"
                    controls={true}
                    controlsList="nodownload"
                    crossOrigin="anonymous"
                    disablePictureInPicture={true}
                  >
                    <source
                      src="https://storage.googleapis.com/video.mp4"
                      type="video/mp4"
                    />
                  </video>
                </div>
              </div>
              <MetadataCues
                videoRef={
                  Object {
                    "current": null,
                  }
                }
              />
            </div>
            <Timeline
              length={144.45}
              videoRef={
                Object {
                  "current": null,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": "100%",
        }
      }
    >
      <div
        className="emotion-14"
      >
        <button
          aria-label="Asset Metadata"
          className="emotion-15"
          onClick={[Function]}
          title="Asset Metadata"
          type="button"
        >
          <svg
            data-file-name="information.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Face Recognition Training"
          className="emotion-15"
          onClick={[Function]}
          title="Face Recognition Training"
          type="button"
        >
          <svg
            data-file-name="faceDetection.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Add Labels To Model"
          className="emotion-15"
          onClick={[Function]}
          title="Add Labels To Model"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete"
          className="emotion-15"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="trash.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-19"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Asset /> should render properly 1`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-right: 1px;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  margin-bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg,
.emotion-5 .noop svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #808080;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  margin-top: 1px;
  overflow: hidden;
}

.emotion-9 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-11:hover,
.emotion-11.focus-visible:focus,
.emotion-11 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-11:hover svg,
.emotion-11.focus-visible:focus svg,
.emotion-11 .noop svg {
  opacity: 1;
}

.emotion-11[aria-disabled=true],
.emotion-11 .noop {
  color: #808080;
}

.emotion-11:hover {
  background-color: #2e2e2e;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
        >
          <a
            className="emotion-5"
            href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=W3sidHlwZSI6ImZhY2V0IiwiYXR0cmlidXRlIjoibWVkaWEudHlwZSIsInZhbHVlcyI6eyJmYWNldHMiOlsidmlkZW8iXX19XQ=="
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <svg
              data-file-name="back.svg"
              height={20}
            />
          </a>
        </div>
        <div>
          test_document.docx
        </div>
        <div
          className="emotion-6"
        />
      </div>
      <div
        className="emotion-7"
      >
        <div
          className="emotion-8"
        >
          <img
            alt="test_document.docx"
            className="emotion-9"
            src="https://storage.googleapis.com/image.jpeg"
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": "100%",
        }
      }
    >
      <div
        className="emotion-10"
      >
        <button
          aria-label="Asset Metadata"
          className="emotion-11"
          onClick={[Function]}
          title="Asset Metadata"
          type="button"
        >
          <svg
            data-file-name="information.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Face Recognition Training"
          className="emotion-11"
          onClick={[Function]}
          title="Face Recognition Training"
          type="button"
        >
          <svg
            data-file-name="faceDetection.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Add Labels To Model"
          className="emotion-11"
          onClick={[Function]}
          title="Add Labels To Model"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete"
          className="emotion-11"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="trash.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-15"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Asset /> should render videos properly 1`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-right: 1px;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  margin-bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg,
.emotion-5 .noop svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #808080;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  margin-top: 1px;
  overflow: hidden;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-15 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-15:hover,
.emotion-15.focus-visible:focus,
.emotion-15 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-15:hover svg,
.emotion-15.focus-visible:focus svg,
.emotion-15 .noop svg {
  opacity: 1;
}

.emotion-15[aria-disabled=true],
.emotion-15 .noop {
  color: #808080;
}

.emotion-15:hover {
  background-color: #2e2e2e;
}

.emotion-19 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
        >
          <a
            className="emotion-5"
            href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=W3sidHlwZSI6ImZhY2V0IiwiYXR0cmlidXRlIjoibWVkaWEudHlwZSIsInZhbHVlcyI6eyJmYWNldHMiOlsidmlkZW8iXX19XQ=="
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <svg
              data-file-name="back.svg"
              height={20}
            />
          </a>
        </div>
        <div>
          FatManOnABike1914.mp4
        </div>
        <div
          className="emotion-6"
        />
      </div>
      <div
        className="emotion-7"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-12"
                >
                  <video
                    className="emotion-13"
                    controls={true}
                    controlsList="nodownload"
                    crossOrigin="anonymous"
                    disablePictureInPicture={true}
                  >
                    <source
                      src="https://storage.googleapis.com/video.mp4"
                      type="video/mp4"
                    />
                    <track
                      default={false}
                      kind="captions"
                      label="English"
                      src="/webvtt/english.vtt"
                    />
                    <track
                      default={false}
                      kind="captions"
                      label="French"
                      src="/webvtt/french.vtt"
                    />
                    <track
                      default={true}
                      kind="metadata"
                      label="gcp-label-detection"
                      src="/webvtt/gcp-label-detection.vtt"
                    />
                    <track
                      default={true}
                      kind="metadata"
                      label="gcp-object-detection"
                      src="/webvtt/gcp-object-detection.vtt"
                    />
                  </video>
                </div>
              </div>
              <MetadataCues
                videoRef={
                  Object {
                    "current": null,
                  }
                }
              />
            </div>
            <Timeline
              length={144.45}
              videoRef={
                Object {
                  "current": null,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": "100%",
        }
      }
    >
      <div
        className="emotion-14"
      >
        <button
          aria-label="Asset Metadata"
          className="emotion-15"
          onClick={[Function]}
          title="Asset Metadata"
          type="button"
        >
          <svg
            data-file-name="information.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Face Recognition Training"
          className="emotion-15"
          onClick={[Function]}
          title="Face Recognition Training"
          type="button"
        >
          <svg
            data-file-name="faceDetection.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Add Labels To Model"
          className="emotion-15"
          onClick={[Function]}
          title="Add Labels To Model"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete"
          className="emotion-15"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="trash.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-19"
        />
      </div>
    </div>
  </div>
</div>
`;
